crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_attrs__cleanup_attrs-2.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_attrs.rs
expression: "test_config(r#\"{ \"cleanupAttrs\": {\n            \"newlines\": true,\n            \"trim\": true,\n            \"spaces\": true\n        } }\"#,\nSome(r#\"<svg xmlns=\"  http://www.w3.org/2000/svg\n  \" attr=\"a      b\">\n    <!-- Should remove all unnecessary whitespace from attributes -->\n    test &amp; &lt;&amp; &gt; &apos; &quot; &amp;\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" attr="a b">
    <!-- Should remove all unnecessary whitespace from attributes -->
    test &amp; &lt;&amp; &gt; ' " &amp;
</svg>
